# cargo-mini-repo

./: Cargo.toml  cfg.toml
src/: config.rs  err_context.rs  git.rs  helpers.rs  initializer.rs  lib.rs  main.rs  routes.rs  server.rs
src/server/: routes.rs
