[package]
name = "cargo-mini-repo"
version = "0.2.2"
authors = ["k.bagrov <k.bagrov@g.nsu.ru>"]
edition = "2018"
publish = ["local"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
rouille = "3.0"
log = "0.4"
simplelog = "0.9"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
semver = { version = "0.10", features = ["serde"] }
sha2 = "0.9"
hex = "0.4"
structopt = "0.3"
